--- a/public/style.css
+++ b/public/style.css
@@ -1,53 +1,220 @@
 body {
-	background: #990000;
-	font-family: 'Satisfy', cursive;
-	color: #f3d3b2;
+	background: #800000;
+	font-family: 'Neucha', cursive;
 }
 
 h1{
-	font-size: 5em;
+	font-size: 7em;
+	color: #FFFFCC;
   margin: 10px 0 0 10px;
   white-space: nowrap;
   overflow: hidden;
   width: 15em;
   height: 3em;
-  line-height: 130px;
-  animation: type 4s steps(60,end);
+  line-height: 170px;
+  float: left;
+  text-align: center;
+  animation: type 3s steps(60,end);
 }
 
-span{
-  animation: blink 1s infinite;
+.banner {
+	width: 100%;
+	height: 100px;
+	background: url('images/balloons.svg');
+}
+.thread {
+	width: 100%;
+	height: 10px;
+	background: #935D37;
+}
+
+.blink-line{
+	margin-left: 2%;
+  animation: blink-line 1s infinite;
 }
 
 @keyframes type{
   from { width: 0; }
 }
 
-@keyframes blink{
+@keyframes blink-line{
   to{opacity: .0;}
 }
 
-.img-container {
-	width: 355px;
-	height: 360px;
-	position: relative;
-	left: -500px;
-	top: -100px;
-	animation: swift 2s ease-in-out .5s infinite alternate;
+.face {
+	width: 200px;
+	height: 200px;
+	float: left;
+	position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+	bottom:100px;
+	background: #935D37;
+	border-radius: 50%;
 }
 
-@keyframes swift {
-	0% {
-		left: -500px;
-		top: -100px;
-	}
-	50% {
-		left: 400px;
-		top: 100px;
-	}
-  100% {
-    left: 900px;
-    top: 0;
+.specs {
+	position: relative;
+}
+
+.frame-1 {
+	width: 40px;
+	height: 30px;
+	position: absolute;
+	top: 7px;
+	left: 33px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border: 6px solid #000;
+}
+
+.frame-2 {
+	width: 40px;
+	height: 30px;
+	position: absolute;
+	top: 7px;
+	right: 33px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border: 6px solid #000;
+}
+
+.eye-1 {
+   height:15px;
+   width:30px;
+   position: absolute;
+   top: 10px;
+   left: 6px;
+   border-radius: 0 0 90px 90px;
+   -moz-border-radius: 0 0 90px 90px;
+   -webkit-border-radius: 0 0 90px 90px;
+   background: #fff;
+   color: #000;
+   font-size: 40px;
+   line-height: 0;
+   animation:blink 2s ease-in-out infinite;
+}
+
+.eye-2 {
+   height:15px;
+   width:30px;
+   position: absolute;
+   top: 10px;
+   left: 6px;
+   border-radius: 0 0 90px 90px;
+   -moz-border-radius: 0 0 90px 90px;
+   -webkit-border-radius: 0 0 90px 90px;
+   background: #fff;
+   color: #000;
+   font-size: 40px;
+   line-height: 0;
+   animation:blink 2s ease-in-out infinite;
+}
+
+.frame-side-1 {
+  position: absolute;
+  top: 20px;
+  left: 0px;
+  border-bottom-left-radius: 10px;
+  width: 30px;
+  height: 6px;
+  background: #000;
+  transform: rotate(30deg);
+}
+
+.frame-side-2 {
+  position: absolute;
+  top: 20px;
+  right: 0px;
+  border-bottom-right-radius: 10px;
+  width: 30px;
+  height: 6px;
+  background: #000;
+  transform: rotate(-30deg);
+}
+
+.frame-connector {
+  position: absolute;
+  top: 25px;
+  left: 85px;
+  width: 30px;
+  height: 6px;
+  background: #000;
+}
+
+.mouth {
+	position: absolute;
+	bottom: 20px;
+	left: 50px;
+	height: 20px;
+	width: 100px;
+	border-radius: 0 0 90px 90px;
+	-moz-border-radius: 0 0 90px 90px;
+	-webkit-border-radius: 0 0 90px 90px;
+	background: #fff;
+}
+
+.hair {
+     height:100px;
+     width:200px;
+     border-radius: 90px 90px 0 0;
+     -moz-border-radius: 90px 90px 0 0;
+     -webkit-border-radius: 90px 90px 0 0;
+     background: #000;
+}
+
+.small-goatee {
+  width: 0;
+  height: 0;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 15px solid #000;
+  position: absolute;
+  bottom: 2px;
+  right: 85px;
+}
+
+ @keyframes blink {
+  90% {
+   transform:none;
+  }
+  95% {
+   transform:rotateX(90deg);
   }
 }
 
+.eye-ball {
+	width: 10px;
+	height: 10px;
+	margin: 0 auto;
+	background: #000;
+	border-radius: 50%
+}
+
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
+	background: url('images/balloons.svg');
+}
+
+@media all and (max-width: 768px) {
+	.banner {
+		height: 30px;
+	}
+	h1 {
+		font-size: 1.8em;
+		text-align: left;
+		line-height: 70px;
+	}
+
+	footer {
+		height: 30px;
+	}
+}
